src/core-crm/objects/Product_Specification__c/Product_Specification__c.object-meta.xml
<CustomObject>
    <label>Product Specification</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Product Specification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>