src/core-crm/objects/Product_Specification__c/fields/Client_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Client_Review_Required__c</fullName>
    <label>Client Review Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Client Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>