src/core-crm/objects/Product_Specification__c/fields/Competitor_Summary__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Summary__c</fullName>
    <label>Competitor Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>