src/core-crm/objects/Product_Specification__c/fields/Endorsed_by__c.field-meta.xml
<CustomField>
    <fullName>Endorsed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endorsed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Specifications (Endorsed by)</relationshipLabel>
    <relationshipName>Product_Specifications1</relationshipName>
    <type>Lookup</type>
</CustomField>