src/core-crm/objects/Product_Specification__c/fields/External_idea_Form__c.field-meta.xml
<CustomField>
    <fullName>External_idea_Form__c</fullName>
    <label>External idea Form</label>
    <type>Url</type>
</CustomField>