src/core-crm/objects/Product_Specification__c/fields/Financial_Viability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Viability__c</fullName>
    <label>Financial Viability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>