src/core-crm/objects/Product_Specification__c/fields/Idea_Summary__c.field-meta.xml
<CustomField>
    <fullName>Idea_Summary__c</fullName>
    <label>Idea Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>