src/core-crm/objects/Product_Specification__c/fields/Internal_Idea_Form__c.field-meta.xml
<CustomField>
    <fullName>Internal_Idea_Form__c</fullName>
    <label>Internal Idea Form</label>
    <type>Url</type>
</CustomField>