src/core-crm/objects/Product_Specification__c/fields/IsExternal_Requestor__c.field-meta.xml
<CustomField>
    <fullName>IsExternal_Requestor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExternal Requestor</label>
    <type>Checkbox</type>
</CustomField>