src/core-crm/objects/Product_Specification__c/fields/Lead_School__c.field-meta.xml
<CustomField>
    <fullName>Lead_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Specifications</relationshipLabel>
    <relationshipName>Product_Specifications1</relationshipName>
    <type>Lookup</type>
</CustomField>