src/core-crm/objects/Product_Specification__c/fields/LinkedIn_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_URL__c</fullName>
    <formula>Requestor_Name__r.LinkedIn_Profile_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Profile</label>
    <type>Text</type>
</CustomField>