src/core-crm/objects/Product_Specification__c/fields/Market_Need__c.field-meta.xml
<CustomField>
    <fullName>Market_Need__c</fullName>
    <label>Market Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>