src/core-crm/objects/Product_Specification__c/fields/Market_Research__c.field-meta.xml
<CustomField>
    <fullName>Market_Research__c</fullName>
    <label>Market Research Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>