src/core-crm/objects/Product_Specification__c/fields/Not_Proceeding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Proceeding_Comments__c</fullName>
    <defaultValue>(&quot;Please be advised that this comment will be shared with the requestor.&quot;)</defaultValue>
    <label>Not Proceeding Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>