src/core-crm/objects/Product_Specification__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Specifications</relationshipLabel>
    <relationshipName>Product_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>