src/core-crm/objects/Product_Specification__c/fields/Overall_Program_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Overall_Program_Outcome__c</fullName>
    <label>Overall Program Outcome</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>