src/core-crm/objects/Product_Specification__c/fields/Primary_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Faculty__c</fullName>
    <label>Primary Faculty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faculty of Business and Law</fullName>
            </value>
            <value>
                <fullName>Faculty of Creative Industries, Education and Social Justice</fullName>
            </value>
            <value>
                <fullName>Faculty of Engineering</fullName>
            </value>
            <value>
                <fullName>Faculty of Health</fullName>
            </value>
            <value>
                <fullName>Faculty of Science</fullName>
            </value>
            <value>
                <fullName>Learning and Teaching Unit</fullName>
            </value>
            <value>
                <fullName>Office of the DVC &amp; VP (Research)</fullName>
            </value>
            <value>
                <fullName>QUT College</fullName>
            </value>
            <value>
                <fullName>University Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>