src/core-crm/objects/Product_Specification__c/fields/Product_Specification_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Specification_Name__c</fullName>
    <description>This field will appear on the Corporate Portal for filtering the products under the &apos;Tailored Executive Education&apos; tab.</description>
    <inlineHelpText>This field will appear on the Corporate Portal for filtering the products under the &apos;Tailored Executive Education&apos; tab.</inlineHelpText>
    <label>Product Specification Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>