src/core-crm/objects/Product_Specification__c/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Course</fullName>
            </value>
            <value>
                <fullName>Master Class</fullName>
            </value>
            <value>
                <fullName>Microcredential</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Information Session</fullName>
            </value>
            <value>
                <fullName>Discussion Forum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>