src/core-crm/objects/Product_Specification__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
                <isActive>false</isActive>
                <label>Unit</label>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Short Course</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Single Product</fullName>
                <isActive>false</isActive>
                <label>Single Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>