src/core-crm/objects/Product_Specification__c/fields/Professional_Profile__c.field-meta.xml
<CustomField>
    <fullName>Professional_Profile__c</fullName>
    <label>Professional Profile</label>
    <type>TextArea</type>
</CustomField>