src/core-crm/objects/Product_Specification__c/fields/QUT_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff_Email__c</fullName>
    <formula>Requestor_Name__r.QUT_Staff_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUT Staff Email</label>
    <type>Text</type>
</CustomField>