src/core-crm/objects/Product_Specification__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <formula>Requestor_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Email</label>
    <type>Text</type>
</CustomField>