src/core-crm/objects/Product_Specification__c/fields/Requestor_Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Internal_External__c</fullName>
    <label>Requestor Internal/External</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>