src/core-crm/objects/Product_Specification__c/fields/Requestor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Mobile__c</fullName>
    <formula>Requestor_Name__r.Mobile_No_Locale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Mobile</label>
    <type>Text</type>
</CustomField>