src/core-crm/objects/Product_Specification__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Specifications (Requestor Name)</relationshipLabel>
    <relationshipName>Product_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>