src/core-crm/objects/Product_Specification__c/fields/Requestor_Preferred_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Preferred_Contact_Number__c</fullName>
    <label>Requestor Preferred Contact Number</label>
    <type>Phone</type>
</CustomField>