src/core-crm/objects/Product_Specification__c/fields/Requires_Director_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Requires_Director_Endorsement__c</fullName>
    <label>Requires Director Endorsement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>