src/core-crm/objects/Product_Specification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Idea Sent</fullName>
            </value>
            <value>
                <fullName>Idea Received</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Qualification</fullName>
            </value>
            <value>
                <fullName>Existing Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>