src/core-crm/objects/Product_Specification__c/fields/Supporting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Comments__c</fullName>
    <label>Supporting Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>