src/core-crm/objects/Product_Specification__c/recordTypes/CCE.recordType-meta.xml
<RecordType>
    <fullName>CCE</fullName>
    <active>true</active>
    <description>Used to Design products which are the result of a closed won Opportunity in Salesforce.</description>
    <label>CCE</label>
</RecordType>