src/core-crm/objects/Product_Specification__c/recordTypes/CCE_Program_Specification.recordType-meta.xml
<RecordType>
    <fullName>CCE_Program_Specification</fullName>
    <active>true</active>
    <description>Used to Design products which are the result of a closed won Opportunity in Salesforce.</description>
    <label>CCE Program Specification</label>
</RecordType>