src/core-crm/objects/Product_Specification__c/recordTypes/OPE.recordType-meta.xml
<RecordType>
    <fullName>OPE</fullName>
    <active>true</active>
    <description>Used to Design products which are the result of an idea request from a faculty.</description>
    <label>OPE</label>
</RecordType>