src/core-crm/objects/Product_Specification__c/recordTypes/OPE_Program_Specification.recordType-meta.xml
<RecordType>
    <fullName>OPE_Program_Specification</fullName>
    <active>true</active>
    <description>Used to Design products which are the result of an idea request from a faculty.</description>
    <label>OPE Program Specification</label>
</RecordType>