src/core-crm/objects/Product_Specification__c/validationRules/Client_Review_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Review_Validation</fullName>
    <active>true</active>
    <description>Validates client review required field when stage is from define to design.</description>
    <errorConditionFormula>AND(
 TEXT( PRIORVALUE( Stage__c ) ) = &apos;Define&apos; ,
 ISPICKVAL( Stage__c , &apos;Design&apos;),
 ISPICKVAL( Client_Review_Required__c , &apos;None&apos;)
)</errorConditionFormula>
    <errorMessage>Please ensure that the “Client Review Required” field is either N/A or Client Approved , before moving the stage to Design.</errorMessage>
</ValidationRule>