src/core-crm/objects/Product_Specification__c/validationRules/Complete_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;OPE&apos;,
 ISPICKVAL( PRIORVALUE ( Stage__c ), &apos;Complete&apos; ),
 OR(
    ISCHANGED ( Requestor_Name__c ),
    ISCHANGED ( Requestor_Preferred_Contact_Number__c ),
    ISCHANGED ( LinkedIn_Profile_URL__c ),
    ISCHANGED ( Primary_Faculty__c ),
    ISCHANGED ( Professional_Profile__c ),
    ISCHANGED ( Requestor_Internal_External__c ),
    ISCHANGED ( Idea_Summary__c ),
    ISCHANGED ( Competitor_Summary__c ),
    ISCHANGED ( Market_Research__c ),
    ISCHANGED ( Existing_Product__c ),
    ISCHANGED ( Financial_Viability__c ),
    ISCHANGED ( Market_Need__c ),
    ISCHANGED ( QUTeX_Capacity__c ),
    ISCHANGED ( QUT_Faculty_Capacity__c ),
    ISCHANGED ( Supporting_Comments__c ),
    ISCHANGED ( Product_Type__c ),
    ISCHANGED ( Requires_Director_Endorsement__c ),
    ISCHANGED ( Endorsed_by__c ),
    ISCHANGED ( Not_Proceeding_Comments__c )  
 )
)</errorConditionFormula>
    <errorMessage>Product Specification Stage is already complete.</errorMessage>
</ValidationRule>