src/core-crm/objects/Product_Specification__c/validationRules/Director_Endorsement_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Director_Endorsement_is_required</fullName>
    <active>true</active>
    <description>Requires Director Endorsement is required to move stage from Qualify to Design or Complete.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;OPE&apos;,
ISCHANGED(Stage__c),
ISPICKVAL(PRIORVALUE(Stage__c),&apos;Qualify&apos;),
OR(ISPICKVAL(Stage__c, &apos;Design&apos;),ISPICKVAL(Stage__c, &apos;Complete&apos;)),
ISPICKVAL(Requires_Director_Endorsement__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Requires_Director_Endorsement__c</errorDisplayField>
    <errorMessage>&quot;Requires Director Endorsement&quot; is required to update the Stage.</errorMessage>
</ValidationRule>