src/core-crm/objects/Product_Specification__c/validationRules/Existing_Product_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Existing_Product_is_required</fullName>
    <active>true</active>
    <description>Existing Product is required to move stage from Qualify to Design or Complete.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;OPE&apos;,
ISCHANGED(Stage__c),
ISPICKVAL(PRIORVALUE(Stage__c),&apos;Qualify&apos;),
OR(ISPICKVAL(Stage__c, &apos;Design&apos;),ISPICKVAL(Stage__c, &apos;Complete&apos;)),
ISPICKVAL(Existing_Product__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Existing_Product__c</errorDisplayField>
    <errorMessage>&quot;Existing Product&quot; is required to update the Stage.</errorMessage>
</ValidationRule>