src/core-crm/objects/Product_Specification__c/validationRules/Idea_Summary_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Idea_Summary_is_required</fullName>
    <active>true</active>
    <description>Idea Summary is required to move stage from Qualify to Design or Complete.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;OPE&apos;,
ISCHANGED(Stage__c),
 OR(
  ISPICKVAL(PRIORVALUE(Stage__c),&apos;Qualify&apos;),
  ISPICKVAL(PRIORVALUE(Stage__c),&apos;Idea&apos;)
 ),
OR(ISPICKVAL(Stage__c, &apos;Design&apos;),ISPICKVAL(Stage__c, &apos;Complete&apos;)),
ISBlANK(Idea_Summary__c)
)</errorConditionFormula>
    <errorDisplayField>Idea_Summary__c</errorDisplayField>
    <errorMessage>&quot;Idea Summary&quot; is required to update the Stage.</errorMessage>
</ValidationRule>