src/core-crm/objects/Product_Specification__c/validationRules/Is_Existing_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Existing_Product</fullName>
    <active>true</active>
    <description>OPE Process cannot proceed if idea is an existing product.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;OPE_Program_Specification&apos;,
ISCHANGED(Stage__c),
ISPICKVAL(PRIORVALUE(Stage__c),&apos;Qualify&apos;),
ISPICKVAL(Stage__c, &apos;Design&apos;),
ISPICKVAL(Existing_Product__c,&apos;Yes&apos;)
)</errorConditionFormula>
    <errorMessage>OPE Process cannot proceed if idea is an existing product</errorMessage>
</ValidationRule>