src/core-crm/objects/Product_Specification__c/validationRules/Market_Need_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Market_Need_is_required</fullName>
    <active>true</active>
    <description>Market Need is required to move stage from Qualify to Design or Complete.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;OPE_Program_Specification&apos;,
ISCHANGED(Stage__c),
ISPICKVAL(PRIORVALUE(Stage__c),&apos;Qualify&apos;),
OR(ISPICKVAL(Stage__c, &apos;Design&apos;),ISPICKVAL(Stage__c, &apos;Complete&apos;)),
ISPICKVAL(Market_Need__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Market_Need__c</errorDisplayField>
    <errorMessage>“Market Need” is required to update the Stage.</errorMessage>
</ValidationRule>