src/core-crm/objects/Product_Specification__c/validationRules/Not_Proceeding_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Proceeding_Comments_Required</fullName>
    <active>true</active>
    <description>Requires Not Proceeding Comments when stage is Not Proceeding and status is either Existing Product or Doesnt meet Qualification.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Stage__c , &apos;Not Proceeding&apos; ),
 OR (
  ISPICKVAL( Status__c , &apos;Existing Product&apos; ),
  ISPICKVAL( Status__c , &apos;Doesnt meet Qualification&apos; )   
 ),
 ISBLANK(  Not_Proceeding_Comments__c )
)</errorConditionFormula>
    <errorMessage>Please enter your comments for not proceeding.</errorMessage>
</ValidationRule>