src/core-crm/objects/Product_Specification__c/validationRules/Not_Proceeding_Comments_Value_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Proceeding_Comments_Value_Default</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c,&apos;Not Proceeding&apos;), CONTAINS( Not_Proceeding_Comments__c , &apos;Please be advised that this comment will be shared with the requestor.&apos;) )</errorConditionFormula>
    <errorDisplayField>Not_Proceeding_Comments__c</errorDisplayField>
    <errorMessage>Please update Not Proceeding Comments.</errorMessage>
</ValidationRule>