src/core-crm/objects/Product_Specification__c/validationRules/Not_Proceeding_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Proceeding_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  ISCHANGED( Stage__c ) ,
  ISPICKVAL( Stage__c , &apos;Not Proceeding&apos;) ,
  ISBLANK( TEXT ( Status__c  ) )
)</errorConditionFormula>
    <errorMessage>Status is required.</errorMessage>
</ValidationRule>