src/core-crm/objects/Product_Specification__c/validationRules/Opportunity_Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Name_is_Required</fullName>
    <active>true</active>
    <description>Opportunity Name is Required for Product Specification Record to move the Stage from Define to Design</description>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL( Stage__c, &apos;Define&apos;)),
 ISBLANK( Opportunity_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Opportunity_Name__c</errorDisplayField>
    <errorMessage>“Opportunity Name” is required to update the Stage</errorMessage>
</ValidationRule>