src/core-crm/objects/Product_Specification__c/validationRules/Product_Subtype_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Subtype_is_required</fullName>
    <active>true</active>
    <description>Product Sub-Type is required to move stage from Qualify to Design or Complete.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&apos;OPE_Program_Specification&apos;,
ISCHANGED(Stage__c),
ISPICKVAL(PRIORVALUE(Stage__c),&apos;Qualify&apos;),
OR(ISPICKVAL(Stage__c, &apos;Design&apos;),ISPICKVAL(Stage__c, &apos;Complete&apos;)),
ISPICKVAL(Product_Subtype__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Product_Subtype__c</errorDisplayField>
    <errorMessage>&quot;Product Sub-Type&quot; is required to update the Stage.</errorMessage>
</ValidationRule>